--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="index.html" class="home-navlink">
               <img
                 alt="image"
-                src="public/wander-logo-200h.png"
+                src="public/wander-logo1.png"
                 class="home-image1"
               />
             </a>
