--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/wander-logo1.png"
+      href="public/images/wander-logo1.png"
       type="icon/png"
       sizes="32x32"
     />
@@ -108,7 +108,7 @@
             <a href="index.html" class="home-navlink">
               <img
                 alt="image"
-                src="public/wander-logo1.png"
+                src="public/images/wander-logo1.png"
                 class="home-image1"
               />
             </a>
@@ -186,7 +186,7 @@
           </button>
         </section>
         <section class="home-description">
-          <img alt="image" src="public/1-400w.jpeg" class="home-image2" />
+          <img alt="image" src="public/images/1-400w.jpeg" class="home-image2" />
           <animate-on-reveal
             animation="none"
             duration="2s"
@@ -197,7 +197,7 @@
           >
             <img
               alt="image"
-              src="public/3-700w.jpeg"
+              src="public/images/3-700w.jpeg"
               data-thq-animate-on-reveal="true"
               class="home-image3"
             />
@@ -218,7 +218,7 @@
           >
             <img
               alt="image"
-              src="public/4-700w.jpeg"
+              src="public/images/4-700w.jpeg"
               data-thq-animate-on-reveal="true"
               class="home-image4"
             />
@@ -243,7 +243,7 @@
             <span class="home-text27">explore cities confidently with</span>
             <span></span>
           </h1>
-          <img alt="image" src="public/2-400w.jpeg" class="home-image5" />
+          <img alt="image" src="public/images/2-400w.jpeg" class="home-image5" />
         </section>
         <footer class="home-footer">
           <div class="home-main">
