--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/wander-logo1.png"
+      href="public/images/wander-logo1.png"
       type="icon/png"
       sizes="32x32"
     />
@@ -108,7 +108,7 @@
             <a href="index.html" class="team-navlink">
               <img
                 alt="image"
-                src="public/wander-logo-200h.png"
+                src="public/images/wander-logo1.png"
                 class="team-image1"
               />
             </a>
@@ -148,8 +148,8 @@
           </header>
         </header>
         <section class="team-hero">
-          <img alt="image" src="public/ruby-400w.jpg" class="team-image2" />
-          <img alt="image" src="public/kieran-400w.jpg" class="team-image3" />
+          <img alt="image" src="public/images/ruby-400w.jpg" class="team-image2" />
+          <img alt="image" src="public/images/kieran-400w.jpg" class="team-image3" />
         </section>
         <a
           href="https://www.linkedin.com/in/ngoc-ruby-dao/"
@@ -165,7 +165,7 @@
           rel="noreferrer noopener"
           class="team-link2"
         >
-          <img alt="image" src="public/linkedin-200h.png" class="team-image5" />
+          <img alt="image" src="public/images/linkedin-200h.png" class="team-image5" />
         </a>
         <footer class="team-footer">
           <div class="team-main">
