--- a/team.html
+++ b/team.html
@@ -157,7 +157,7 @@
           rel="noreferrer noopener"
           class="team-link1"
         >
-          <img alt="image" src="public/linkedin-200h.png" class="team-image4" />
+          <img alt="image" src="public/images/linkedin-200h.png" class="team-image4" />
         </a>
         <a
           href="https://www.linkedin.com/in/kierandwallace/"
