--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/images/wander-logo1.png"
+      href="public/wander-logo1.png"
       type="icon/png"
       sizes="32x32"
     />
@@ -83,73 +83,33 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
     />
-    <!--This is the head section-->
-    <!-- <style> ... </style> -->
   </head>
   <body>
     <link rel="stylesheet" href="./style.css" />
     <div>
       <link href="./team.css" rel="stylesheet" />
 
-      <div class="team-container1">
+      <div class="team-container">
         <header class="team-header1">
           <header data-thq="thq-navbar" class="team-navbar">
             <div
               data-thq="thq-navbar-nav"
               data-role="Nav"
               class="team-desktop-menu"
-            >
-              <nav
-                data-thq="thq-navbar-nav-links"
-                data-role="Nav"
-                class="team-nav1"
-              ></nav>
-            </div>
+            ></div>
             <a href="index.html" class="team-navlink">
               <img
-                alt="image"
+                alt="logo"
                 src="public/images/wander-logo1.png"
                 class="team-image1"
               />
             </a>
-            <div data-thq="thq-mobile-menu" class="team-mobile-menu">
-              <div
-                data-thq="thq-mobile-menu-nav"
-                data-role="Nav"
-                class="team-nav2"
-              >
-                <div class="team-container2">
-                  <span class="team-logo1">Character</span>
-                  <div data-thq="thq-close-menu" class="team-menu-close">
-                    <svg viewBox="0 0 1024 1024" class="team-icon1">
-                      <path
-                        d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <nav
-                  data-thq="thq-mobile-menu-nav-links"
-                  data-role="Nav"
-                  class="team-nav3"
-                >
-                  <span class="team-text1">About</span>
-                  <span class="team-text2">Features</span>
-                  <span class="team-text3">Pricing</span>
-                  <span class="team-text4">Team</span>
-                  <span class="team-text5">Blog</span>
-                </nav>
-                <div class="team-container3">
-                  <button class="team-login button">Login</button>
-                  <button class="button">Register</button>
-                </div>
-              </div>
-            </div>
+            <div data-thq="thq-mobile-menu" class="team-mobile-menu"></div>
           </header>
         </header>
         <section class="team-hero">
-          <img alt="image" src="public/images/ruby-400w.jpg" class="team-image2" />
-          <img alt="image" src="public/images/kieran-400w.jpg" class="team-image3" />
+          <img alt="ruby" src="public/images/ruby-400w.jpg" class="team-image2" />
+          <img alt="kieran" src="public/images/kieran-400w.jpg" class="team-image3" />
         </section>
         <a
           href="https://www.linkedin.com/in/ngoc-ruby-dao/"
@@ -157,7 +117,7 @@
           rel="noreferrer noopener"
           class="team-link1"
         >
-          <img alt="image" src="public/images/linkedin-200h.png" class="team-image4" />
+          <img alt="linkedin" src="public/images/linkedin-200h.png" class="team-image4" />
         </a>
         <a
           href="https://www.linkedin.com/in/kierandwallace/"
@@ -165,40 +125,14 @@
           rel="noreferrer noopener"
           class="team-link2"
         >
-          <img alt="image" src="public/images/linkedin-200h.png" class="team-image5" />
+          <img alt="linkedin" src="public/images/linkedin-200h.png" class="team-image5" />
         </a>
         <footer class="team-footer">
           <div class="team-main">
             <div class="team-branding">
               <div class="team-heading">
-                <h2 class="team-logo2">wander.ai</h2>
+                <h2 class="team-logo">wander.ai</h2>
               </div>
-            </div>
-            <div class="team-socials">
-              <a
-                href="https://twitter.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="team-twitter social button"
-              >
-                <img
-                  alt="image"
-                  src="public/Icons/twitter.svg"
-                  class="team-image6"
-                />
-              </a>
-              <a
-                href="https://discord.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="team-discord social button"
-              >
-                <img
-                  alt="image"
-                  src="public/Icons/discord.svg"
-                  class="team-image7"
-                />
-              </a>
             </div>
           </div>
           <span class="team-copyright">
@@ -209,10 +143,10 @@
         <h1 class="team-header2">ruby</h1>
         <h1 class="team-header3">kieran</h1>
         <h1 class="team-header4">
-          <span class="team-text6">meet the</span>
+          <span class="team-text1">meet the</span>
           <span></span>
-          <span class="team-text8">team</span>
-          <span class="team-text9">...</span>
+          <span class="team-text3">team</span>
+          <span class="team-text4">...</span>
         </h1>
         <h1 class="team-header5">co-founder &amp; CMW</h1>
         <h1 class="team-header6">co-founder &amp; CEW</h1>
