--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/images/wander-logo1.png"
+      href="public/wander-logo1.png"
       type="icon/png"
       sizes="32x32"
     />
@@ -83,8 +83,6 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
     />
-    <!--This is the head section-->
-    <!-- <style> ... </style> -->
   </head>
   <body>
     <link rel="stylesheet" href="./style.css" />
@@ -98,75 +96,24 @@
               data-thq="thq-navbar-nav"
               data-role="Nav"
               class="home-desktop-menu"
-            >
-              <nav
-                data-thq="thq-navbar-nav-links"
-                data-role="Nav"
-                class="home-nav1"
-              ></nav>
-            </div>
-            <a href="index.html" class="home-navlink">
+            ></div>
+            <a href="index.html" class="home-navlink1">
               <img
-                alt="image"
+                alt="logo"
                 src="public/images/wander-logo1.png"
                 class="home-image1"
               />
             </a>
-            <div data-thq="thq-navbar-btn-group" class="home-btn-group"></div>
-            <div data-thq="thq-mobile-menu" class="home-mobile-menu">
-              <div
-                data-thq="thq-mobile-menu-nav"
-                data-role="Nav"
-                class="home-nav2"
-              >
-                <div class="home-container2">
-                  <span class="home-logo1">Character</span>
-                  <div data-thq="thq-close-menu" class="home-menu-close">
-                    <svg viewBox="0 0 1024 1024" class="home-icon1">
-                      <path
-                        d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <nav
-                  data-thq="thq-mobile-menu-nav-links"
-                  data-role="Nav"
-                  class="home-nav3"
-                >
-                  <span class="home-text10">About</span>
-                  <span class="home-text11">Features</span>
-                  <span class="home-text12">Pricing</span>
-                  <span class="home-text13">Team</span>
-                  <span class="home-text14">Blog</span>
-                </nav>
-                <div class="home-container3">
-                  <button class="home-login button">Login</button>
-                  <button class="button">Register</button>
-                </div>
-              </div>
-              <div class="home-icon-group">
-                <svg viewBox="0 0 950.8571428571428 1024" class="home-icon3">
-                  <path
-                    d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
-                  ></path></svg
-                ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon5">
-                  <path
-                    d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                  ></path></svg
-                ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon7">
-                  <path
-                    d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
-                  ></path>
-                </svg>
-              </div>
-            </div>
+            <div data-thq="thq-mobile-menu" class="home-mobile-menu"></div>
           </header>
         </header>
         <section class="home-hero">
           <div class="home-heading1">
             <p class="home-caption1">explore with confidence</p>
           </div>
+          <a href="sf.html" class="home-button button-mobile button">
+            start wandering
+          </a>
           <animate-on-reveal
             animation="slideInUp"
             delay="0s"
@@ -174,93 +121,69 @@
             easing="ease"
             iteration="1"
           >
-            <h1 data-thq-animate-on-reveal="true" class="home-header2">
-              <span class="home-text15">your</span>
+            <h2 data-thq-animate-on-reveal="true" class="home-header2">
+              <span class="home-text10">your</span>
               <span></span>
-              <span class="home-text17">eye in the sky</span>
-              <span class="home-text18">...</span>
-            </h1>
+              <span class="home-text12">eye in the sky</span>
+              <span class="home-text13">...</span>
+            </h2>
           </animate-on-reveal>
-          <button type="button" class="home-button button button-mobile">
-            start wandering
-          </button>
         </section>
-        <section class="home-description">
-          <img alt="image" src="public/images/1-400w.jpeg" class="home-image2" />
-          <animate-on-reveal
-            animation="none"
-            duration="2s"
-            delay="0s"
-            direction="normal"
-            easing="ease"
-            iteration="1"
-          >
-            <img
-              alt="image"
-              src="public/images/3-700w.jpeg"
-              data-thq-animate-on-reveal="true"
-              class="home-image3"
-            />
-          </animate-on-reveal>
+        <section class="home-description1">
+          <img alt="city1" src="public/images/1-400w.jpeg" class="home-image2" />
+          <img alt="city3" src="public/images/3-700w.jpeg" class="home-image3" />
           <h1 class="home-header3">
-            <span class="home-text19">new cities can be</span>
+            <span class="home-text14">new cities can be</span>
             <span></span>
-            <span class="home-text21">scary</span>
-            <span class="home-text22">.</span>
+            <span class="home-text16">scary</span>
+            <span class="home-text17">.</span>
           </h1>
-          <animate-on-reveal
-            animation="none"
-            duration="2s"
-            delay="0s"
-            direction="normal"
-            easing="ease"
-            iteration="1"
-          >
-            <img
-              alt="image"
-              src="public/images/4-700w.jpeg"
-              data-thq-animate-on-reveal="true"
-              class="home-image4"
-            />
-          </animate-on-reveal>
-          <p class="home-caption2">explore with confidence</p>
-          <p class="home-caption3">explore with confidence</p>
-          <p class="home-caption4">explore with confidence</p>
-          <h1 class="home-header4">
-            <span class="home-text23">new cities can be</span>
-            <span></span>
-            <span class="home-text25">scary</span>
-            <span class="home-text26">.</span>
-          </h1>
-          <p class="home-caption5">“is that area okay to walk through?”</p>
-          <p class="home-caption6">— academic wanderer</p>
-          <p class="home-caption7">— city wanderer</p>
-          <p class="home-caption8">
+          <img alt="city4" src="public/images/4-700w.jpeg" class="home-image4" />
+          <p class="home-caption2">“is that area okay to walk through?”</p>
+          <p class="home-caption3">— academic wanderer</p>
+          <p class="home-caption4">— city wanderer</p>
+          <p class="home-caption5">
             “are there any parts i should stay away from?”
           </p>
-          <h1 class="home-header5">wander.ai</h1>
-          <h1 class="home-header6">
-            <span class="home-text27">explore cities confidently with</span>
+          <h1 class="home-header4">wander.ai</h1>
+          <h1 class="home-header5">
+            <span class="home-text18">explore cities confidently with</span>
             <span></span>
           </h1>
-          <img alt="image" src="public/images/2-400w.jpeg" class="home-image5" />
+          <img alt="city2" src="public/images/2-400w.jpeg" class="home-image5" />
+          <a href="team.html" class="home-navlink2 button-mobile button">
+            meet the team
+          </a>
+        </section>
+        <section class="home-description2">
+          <div class="home-container2">
+            <div class="home-container3">
+              <iframe
+                width="100%"
+                height="400px"
+                src="https://api.mapbox.com/styles/v1/keezy/cm6wgc2q200jo01saevaqbvy0.html?title=false&amp;access_token=pk.eyJ1Ijoia2VlenkiLCJhIjoiY20zcHNtb2xuMGZ6YjJzc2VvaHdleDJvbCJ9.8JkhFV0AYdyeP7xsi2SehA&amp;zoomwheel=false#13.36/37.7531/-122.39177/10.2/35"
+                title="Monochrome"
+                style="border:none;"
+              ></iframe>
+            </div>
+          </div>
         </section>
         <footer class="home-footer">
           <div class="home-main">
             <div class="home-branding">
               <div class="home-heading2">
-                <h2 class="home-logo2">wander.ai</h2>
-                <p class="home-caption9">making wandering more, safe</p>
+                <h2 class="home-logo">wander.ai</h2>
+                <p class="home-caption6">making wandering more, safe</p>
               </div>
-              <div class="home-socials1">
+              <div class="home-socials">
                 <a
                   href="https://twitter.com"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-twitter1 social button"
+                  class="home-twitter social button"
                 >
                   <img
-                    alt="image"
+                    alt="twitter"
                     src="public/Icons/twitter.svg"
                     class="home-image6"
                   />
@@ -269,50 +192,15 @@
                   href="https://discord.com"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-discord1 social button"
+                  class="home-discord social button"
                 >
                   <img
-                    alt="image"
+                    alt="discord"
                     src="public/Icons/discord.svg"
                     class="home-image7"
                   />
                 </a>
               </div>
-            </div>
-            <div class="home-links">
-              <div class="home-list">
-                <div class="home-items">
-                  <a href="team.html" class="home-link button-clean button">
-                    meet the team
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="home-socials2">
-              <a
-                href="https://twitter.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="home-twitter2 social button"
-              >
-                <img
-                  alt="image"
-                  src="public/Icons/twitter.svg"
-                  class="home-image8"
-                />
-              </a>
-              <a
-                href="https://discord.com"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="home-discord2 social button"
-              >
-                <img
-                  alt="image"
-                  src="public/Icons/discord.svg"
-                  class="home-image9"
-                />
-              </a>
             </div>
           </div>
           <span class="home-copyright">
