--- a/sf.html
+++ b/sf.html
@@ -29,6 +29,9 @@ body { margin: 0; padding: 0; }
     const tenderloin = [-122.414193, 37.784028];
     const soma = [-122.401548, 37.780870];
     const bayview = [-122.391679, 37.733650];
+    const richmond = [-122.472446, 37.780511];
+    const sunset = [-122.495334, 37.753421];
+    const noe = [-122.432044, 37.751562];
     const bounds = [
         [-122.66336, 37.492987], // Southwest coordinates
         [-122.250481, 37.871651] // Northeast coordinates
@@ -69,7 +72,7 @@ body { margin: 0; padding: 0; }
         );
     });
 
-        // create the popup
+        // create the popup for tenderloin
         const popup = new mapboxgl.Popup({ offset: 10 }).setText(
         'Tenderloin: Crime Rate: High. Characteristics: Dense urban area with significant homeless population and social services. Common Crimes: Violent crimes, drug-related offenses, and property crimes.'
     );
@@ -85,7 +88,7 @@ body { margin: 0; padding: 0; }
         .addTo(map);
 
 
-        // create the popup
+        // create the popup for soma
         const popup_soma = new mapboxgl.Popup({ offset: 10 }).setText(
         'South of Market (SoMa): Crime Rate: High. Characteristics: Mix of residential, commercial, and industrial areas. Common Crimes: Violent crimes and property crimes, especially at night.'
     );
@@ -100,7 +103,7 @@ body { margin: 0; padding: 0; }
         .setPopup(popup_soma) // sets a popup on this marker
         .addTo(map);
 
-        // create the popup
+        // create the popup for bayview
         const popup_bayview = new mapboxgl.Popup({ offset: 10 }).setText(
         'Bayview-Hunters Point: Crime Rate: High. Characteristics: Historically underserved area with ongoing community improvement efforts. Common Crimes: Violent crimes and property crimes.'
     );
@@ -113,6 +116,52 @@ body { margin: 0; padding: 0; }
     new mapboxgl.Marker(el3)
         .setLngLat(bayview)
         .setPopup(popup_bayview) // sets a popup on this marker
+        .addTo(map);
+
+        // create the popup for sunset
+        const popup_senset = new mapboxgl.Popup({ offset: 10 }).setText(
+        'Sunset District: Crime Rate: Moderate. Characteristics: Mostly residential, with a mix of single-family homes and apartments. Common Crimes: Property crimes, particularly in commercial zones.'
+    );
+
+    // create DOM element for the marker
+    const el5 = document.createElement('div');
+    el5.id = 'marker';
+
+    // create the marker
+    new mapboxgl.Marker(el5)
+        .setLngLat(sunset)
+        .setPopup(popup_senset) // sets a popup on this marker
+        .addTo(map);
+
+
+        // create the popup for richmond
+        const popup_richmond = new mapboxgl.Popup({ offset: 10 }).setText(
+        'Richmond District: Crime Rate: Moderate. Characteristics: Diverse, family-friendly, with busy commercial areas. Common Crimes: Property crimes like theft and burglary, especially in busier parts.'
+    );
+
+    // create DOM element for the marker
+    const el4 = document.createElement('div');
+    el4.id = 'marker';
+
+    // create the marker
+    new mapboxgl.Marker(el4)
+        .setLngLat(richmond)
+        .setPopup(popup_richmond) // sets a popup on this marker
+        .addTo(map);
+
+        // create the popup for sunset
+        const popup_noe = new mapboxgl.Popup({ offset: 10 }).setText(
+        'Noe Valley: Crime Rate: Moderate. Characteristics: Family-friendly, known for its small-town feel within the city. Common Crimes: Property crimes, such as theft and burglary.'
+    );
+
+    // create DOM element for the marker
+    const el6 = document.createElement('div');
+    el6.id = 'marker';
+
+    // create the marker
+    new mapboxgl.Marker(el6)
+        .setLngLat(noe)
+        .setPopup(popup_noe) // sets a popup on this marker
         .addTo(map);
 
 
