--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
         <section class="home-description2">
           <div class="home-container2">
-
+            <iframe src="map_spin.html"width="1700" height="1200"></iframe>
           </div>
         </section>
         <footer class="home-footer">
