--- a/map_spin.html
+++ b/map_spin.html
@@ -18,16 +18,18 @@ body { margin: 0; padding: 0; }
     const map = new mapboxgl.Map({
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-        style: 'mapbox://styles/mapbox/light-v11',
-        center: [-87.62712, 41.89033],
-        zoom: 15.5,
-        pitch: 45
+        style: 'mapbox://styles/keezy/cm6wgc2q200jo01saevaqbvy0',
+        center: [-122.420916, 37.778260], // starting position
+        zoom: 15.5, // starting zoom
+        pitch: 45,
+        antialias: true,
+        interactive: false
     });
 
     function rotateCamera(timestamp) {
         // clamp the rotation between 0 -360 degrees
         // Divide timestamp by 100 to slow rotation to ~10 degrees / sec
-        map.rotateTo((timestamp / 100) % 360, { duration: 0 });
+        map.rotateTo((timestamp / 200) % 360, { duration: 0 });
         // Request the next frame of the animation.
         requestAnimationFrame(rotateCamera);
     }
@@ -45,40 +47,22 @@ body { margin: 0; padding: 0; }
             }
         }
 
-        map.addLayer({
-            'id': '3d-buildings',
-            'source': 'composite',
-            'source-layer': 'building',
-            'filter': ['==', 'extrude', 'true'],
-            'type': 'fill-extrusion',
-            'minzoom': 15,
-            'paint': {
-                'fill-extrusion-color': '#aaa',
-
-                // use an 'interpolate' expression to add a smooth transition effect to the
-                // buildings as the user zooms in
-                'fill-extrusion-height': [
-                    'interpolate',
-                    ['linear'],
-                    ['zoom'],
-                    15,
-                    0,
-                    15.05,
-                    ['get', 'height']
-                ],
-                'fill-extrusion-base': [
-                    'interpolate',
-                    ['linear'],
-                    ['zoom'],
-                    15,
-                    0,
-                    15.05,
-                    ['get', 'min_height']
-                ],
-                'fill-extrusion-opacity': 0.6
-            }
-        });
+        // The 'building' layer in the Mapbox Streets
+        // vector tileset contains building height data
+        // from OpenStreetMap.
+        map.addLayer(
+            {
+                'id': 'add-3d-buildings',
+                'source': 'composite',
+                'source-layer': 'building',
+                'filter': ['==', 'extrude', 'true'],
+                'type': 'fill-extrusion',
+                'minzoom': 15,
+            },
+            labelLayerId
+        );
     });
+
 </script>
 
 </body>
