--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>wander</title>
+    <title>wewander</title>
     <meta property="og:title" content="wander" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -145,7 +145,7 @@
           <p class="home-caption5">
             “are there any parts i should stay away from?”
           </p>
-          <h1 class="home-header4">wander.ai</h1>
+          <h1 class="home-header4">wewander</h1>
           <h1 class="home-header5">
             <span class="home-text18">explore cities confidently with</span>
             <span></span>
@@ -164,7 +164,7 @@
           <div class="home-main">
             <div class="home-branding">
               <div class="home-heading2">
-                <h2 class="home-logo">wander.ai</h2>
+                <h2 class="home-logo">wewander</h2>
                 <p class="home-caption6">making wandering more, safe</p>
               </div>
               <div class="home-socials">
