--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
           </div>
           <span class="home-copyright">
-            © 2025 wander.ai. All Rights Reserved.
+            © 2025 wewander. All Rights Reserved.
           </span>
         </footer>
       </div>
