--- a/team.html
+++ b/team.html
@@ -136,7 +136,7 @@
             </div>
           </div>
           <span class="team-copyright">
-            © 2025 wander.ai. All Rights Reserved.
+            © 2025 wewander. All Rights Reserved.
           </span>
           <p class="team-caption">making wandering more, safe</p>
         </footer>
