--- a/team.html
+++ b/team.html
@@ -83,6 +83,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css"
     />
+    <!--This is the head section-->
+    <!-- <style> ... </style> -->
   </head>
   <body>
     <link rel="stylesheet" href="./style.css" />
@@ -99,8 +101,8 @@
             ></div>
             <a href="index.html" class="team-navlink">
               <img
-                alt="logo"
-                src="public/images/wander-logo1.png"
+                alt="image"
+                src="public/Images/wander-logo-200h.png"
                 class="team-image1"
               />
             </a>
@@ -108,8 +110,16 @@
           </header>
         </header>
         <section class="team-hero">
-          <img alt="ruby" src="public/images/ruby-400w.jpg" class="team-image2" />
-          <img alt="kieran" src="public/images/kieran-400w.jpg" class="team-image3" />
+          <img
+            alt="image"
+            src="public/Images/ruby-400w.jpg"
+            class="team-image2"
+          />
+          <img
+            alt="image"
+            src="public/Images/kieran-400w.jpg"
+            class="team-image3"
+          />
         </section>
         <a
           href="https://www.linkedin.com/in/ngoc-ruby-dao/"
@@ -117,7 +127,11 @@
           rel="noreferrer noopener"
           class="team-link1"
         >
-          <img alt="linkedin" src="public/images/linkedin-200h.png" class="team-image4" />
+          <img
+            alt="image"
+            src="public/Images/linkedin-200h.png"
+            class="team-image4"
+          />
         </a>
         <a
           href="https://www.linkedin.com/in/kierandwallace/"
@@ -125,19 +139,19 @@
           rel="noreferrer noopener"
           class="team-link2"
         >
-          <img alt="linkedin" src="public/images/linkedin-200h.png" class="team-image5" />
+          <img
+            alt="image"
+            src="public/Images/linkedin-200h.png"
+            class="team-image5"
+          />
         </a>
         <footer class="team-footer">
           <div class="team-main">
             <div class="team-branding">
-              <div class="team-heading">
-                <h2 class="team-logo">wander.ai</h2>
-              </div>
+              <div class="team-heading"><h2 class="team-logo">wandr</h2></div>
             </div>
           </div>
-          <span class="team-copyright">
-            © 2025 wewander. All Rights Reserved.
-          </span>
+          <span class="team-copyright">© 2025 wandr. All Rights Reserved.</span>
           <p class="team-caption">making wandering more, safe</p>
         </footer>
         <h1 class="team-header2">ruby</h1>
