Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="home-main">
             <div class="home-branding">
               <div class="home-heading2">
-                <h2 class="home-logo">wander.ai</h2>
+                <h2 class="home-logo">wandr</h2>
                 <p class="home-caption6">making wandering more, safe</p>
               </div>
               <div class="home-socials">
@@ -220,7 +220,7 @@
             </div>
           </div>
           <span class="home-copyright">
-            © 2025 wander.ai. All Rights Reserved.
+            © 2025 wandri. All Rights Reserved.
           </span>
         </footer>
       </div>
