Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -110,9 +110,6 @@
           </header>
         </header>
         <section class="home-hero">
-          <div class="home-heading1">
-            <p class="home-caption1">explore with confidence</p>
-          </div>
           <button type="button" class="home-button button-mobile button">
             start wandering
           </button>
@@ -130,6 +127,7 @@
               <span class="home-text13">...</span>
             </h2>
           </animate-on-reveal>
+          <p class="home-caption1">explore with confidence</p>
         </section>
         <section class="home-description1">
           <img
@@ -187,7 +185,7 @@
         <footer class="home-footer">
           <div class="home-main">
             <div class="home-branding">
-              <div class="home-heading2">
+              <div class="home-heading">
                 <h2 class="home-logo">wandr</h2>
                 <p class="home-caption6">making wandering more, safe</p>
               </div>
