Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <span class="home-text13">...</span>
             </h2>
           </animate-on-reveal>
-          <p class="home-caption1">explore with confidence</p>
+          <span class="home-text14">explore with confidence</span>
         </section>
         <section class="home-description1">
           <img
@@ -136,10 +136,10 @@
             class="home-image2"
           />
           <h1 class="home-header3">
-            <span class="home-text14">new cities can be</span>
+            <span class="home-text15">new cities can be</span>
             <span></span>
-            <span class="home-text16">scary</span>
-            <span class="home-text17">.</span>
+            <span class="home-text17">scary</span>
+            <span class="home-text18">.</span>
           </h1>
           <img
             alt="image"
@@ -151,10 +151,10 @@
             src="public/Images/3-700w.jpeg"
             class="home-image4"
           />
-          <p class="home-caption2">“is that area okay to walk through?”</p>
-          <p class="home-caption3">— academic wanderer</p>
-          <p class="home-caption4">— city wanderer</p>
-          <p class="home-caption5">
+          <p class="home-caption1">“is that area okay to walk through?”</p>
+          <p class="home-caption2">— academic wanderer</p>
+          <p class="home-caption3">— city wanderer</p>
+          <p class="home-caption4">
             “are there any parts i should stay away from?”
           </p>
           <h1 class="home-header4">wandr</h1>
@@ -164,7 +164,7 @@
             class="home-image5"
           />
           <h1 class="home-header5">
-            <span class="home-text18">explore cities confidently with</span>
+            <span class="home-text19">explore cities confidently with</span>
             <span></span>
           </h1>
           <a href="team.html" class="home-navlink2 button-mobile button">
@@ -187,7 +187,7 @@
             <div class="home-branding">
               <div class="home-heading">
                 <h2 class="home-logo">wandr</h2>
-                <p class="home-caption6">making wandering more, safe</p>
+                <p class="home-caption5">making wandering more, safe</p>
               </div>
               <div class="home-socials">
                 <a
