Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <span class="home-text13">...</span>
             </h2>
           </animate-on-reveal>
-          <span class="home-text14">explore with confidence</span>
+          <h2 class="home-text14">explore with confidence</h2>
         </section>
         <section class="home-description1">
           <img
