--- a/index.html
+++ b/index.html
@@ -113,21 +113,12 @@
           <button type="button" class="home-button button-mobile button">
             start wandering
           </button>
-          <animate-on-reveal
-            animation="slideInUp"
-            delay="0s"
-            direction="normal"
-            easing="ease"
-            iteration="1"
-          >
-            <h2 data-thq-animate-on-reveal="true" class="home-header2">
-              <span class="home-text10">your</span>
-              <span></span>
-              <span class="home-text12">eye in the sky</span>
-              <span class="home-text13">...</span>
-            </h2>
-          </animate-on-reveal>
-          <h2 class="home-text14">explore with confidence</h2>
+          <h2 class="home-header2">
+            <span class="home-text10">your</span>
+            <span></span>
+            <span class="home-text12">eye in the sky</span>
+            <span class="home-text13">...</span>
+          </h2>
         </section>
         <section class="home-description1">
           <img
@@ -136,10 +127,10 @@
             class="home-image2"
           />
           <h1 class="home-header3">
-            <span class="home-text15">new cities can be</span>
+            <span class="home-text14">new cities can be</span>
             <span></span>
-            <span class="home-text17">scary</span>
-            <span class="home-text18">.</span>
+            <span class="home-text16">scary</span>
+            <span class="home-text17">.</span>
           </h1>
           <img
             alt="image"
@@ -164,7 +155,7 @@
             class="home-image5"
           />
           <h1 class="home-header5">
-            <span class="home-text19">explore cities confidently with</span>
+            <span class="home-text18">explore cities confidently with</span>
             <span></span>
           </h1>
           <a href="team.html" class="home-navlink2 button-mobile button">
@@ -226,10 +217,6 @@
     <script
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
-    ></script>
-    <script
-      defer=""
-      src="https://unpkg.com/@teleporthq/react-components/dist/animate-on-reveal.umd.js"
     ></script>
   </body>
 </html>
