Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div>
       <link href="./index.css" rel="stylesheet" />
 
-      <div class="home-container1">
+      <div class="home-container">
         <header class="home-header1">
           <header data-thq="thq-navbar" class="home-navbar">
             <div
@@ -163,15 +163,14 @@
           </a>
         </section>
         <section class="home-description2">
-          <div class="home-container2">
-            <div class="home-container3">
-              <iframe
-                src="https://wander-wip.vercel.app/map_spin.html"
-                width="1500"
-                height="1000"
-              ></iframe>
-            </div>
-          </div>
+          <video
+            src="public/map-spin%20(1)%20(1)%20(1).mp4"
+            autoplay="true"
+            muted="true"
+            preload="auto"
+            playsinline="true"
+            class="home-video"
+          ></video>
         </section>
         <footer class="home-footer">
           <div class="home-main">
