Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             muted="true"
             preload="auto"
             playsinline="true"
+            loop="true"
             class="home-video"
           ></video>
         </section>
