Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -148,16 +148,11 @@
           <p class="home-caption4">
             “are there any parts i should stay away from?”
           </p>
-          <h1 class="home-header4">wandr</h1>
           <img
             alt="image"
             src="public/Images/2-400w.jpeg"
             class="home-image5"
           />
-          <h1 class="home-header5">
-            <span class="home-text18">explore cities confidently with</span>
-            <span></span>
-          </h1>
           <a href="team.html" class="home-navlink2 button-mobile button">
             meet the team
           </a>
@@ -172,6 +167,11 @@
             loop="true"
             class="home-video"
           ></video>
+          <h1 class="home-header4">wandr</h1>
+          <h1 class="home-header5">
+            <span class="home-text18">explore cities confidently with</span>
+            <span></span>
+          </h1>
         </section>
         <footer class="home-footer">
           <div class="home-main">
@@ -208,9 +208,7 @@
               </div>
             </div>
           </div>
-          <span class="home-copyright">
-            © 2025 wandri. All Rights Reserved.
-          </span>
+          <span class="home-copyright">© 2025 wandr. All Rights Reserved.</span>
         </footer>
       </div>
     </div>
