--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
               data-role="Nav"
               class="home-desktop-menu"
             ></div>
-            <a href="index.html" class="home-navlink1">
+            <a href="index.html" class="home-navlink">
               <img
                 alt="image"
                 src="public/Images/wander-logo-200h.png"
-                class="home-image1"
+                class="home-image10"
               />
             </a>
             <div data-thq="thq-mobile-menu" class="home-mobile-menu"></div>
@@ -124,7 +124,7 @@
           <img
             alt="image"
             src="public/Images/1-400w.jpeg"
-            class="home-image2"
+            class="home-image11"
           />
           <h1 class="home-header3">
             <span class="home-text14">new cities can be</span>
@@ -135,12 +135,12 @@
           <img
             alt="image"
             src="public/Images/4-700w.jpeg"
-            class="home-image3"
+            class="home-image12"
           />
           <img
             alt="image"
             src="public/Images/3-700w.jpeg"
-            class="home-image4"
+            class="home-image13"
           />
           <p class="home-caption1">“is that area okay to walk through?”</p>
           <p class="home-caption2">— academic wanderer</p>
@@ -151,11 +151,8 @@
           <img
             alt="image"
             src="public/Images/2-400w.jpeg"
-            class="home-image5"
+            class="home-image14"
           />
-          <a href="team.html" class="home-navlink2 button-mobile button">
-            meet the team
-          </a>
         </section>
         <section class="home-description2">
           <video
@@ -169,9 +166,49 @@
           ></video>
           <h1 class="home-header4">wandr</h1>
           <h1 class="home-header5">
-            <span class="home-text18">explore cities confidently with</span>
+            <span class="home-text18">meet our</span>
+            <span>&nbsp;</span>
+            <span class="home-text20">team</span>
+            <span class="home-text21">.</span>
+          </h1>
+          <h1 class="home-header6">
+            <span class="home-text22">explore cities confidently with</span>
             <span></span>
           </h1>
+          <img
+            src="public/Images/kieran-200w.jpg"
+            alt="image"
+            class="home-image15"
+          />
+          <img
+            src="public/Images/ruby-200w.jpg"
+            alt="image"
+            class="home-image16"
+          />
+          <a
+            href="https://www.linkedin.com/in/kierandwallace/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="home-link1"
+          >
+            <img
+              src="public/Images/linkedin-800h.png"
+              alt="image"
+              class="home-image17"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/ngoc-ruby-dao/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="home-link2"
+          >
+            <img
+              src="public/Images/linkedin-800h.png"
+              alt="image"
+              class="home-image18"
+            />
+          </a>
         </section>
         <footer class="home-footer">
           <div class="home-main">
@@ -190,7 +227,7 @@
                   <img
                     alt="image"
                     src="public/Icons/twitter.svg"
-                    class="home-image6"
+                    class="home-image19"
                   />
                 </a>
                 <a
@@ -202,7 +239,7 @@
                   <img
                     alt="image"
                     src="public/Icons/discord.svg"
-                    class="home-image7"
+                    class="home-image20"
                   />
                 </a>
               </div>
