--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
           <button type="button" class="home-button button-mobile button">
             start wandering
           </button>
-          <h2 class="home-header2">
+          <h2 class="home-header2">...</h2>
+          <h2 class="home-header3">
             <span class="home-text10">your</span>
             <span></span>
             <span class="home-text12">eye in the sky</span>
-            <span class="home-text13">...</span>
           </h2>
         </section>
         <section class="home-description1">
@@ -126,11 +126,11 @@
             src="public/Images/1-400w.jpeg"
             class="home-image11"
           />
-          <h1 class="home-header3">
-            <span class="home-text14">new cities can be</span>
+          <h1 class="home-header4">
+            <span class="home-text13">new cities can be</span>
             <span></span>
-            <span class="home-text16">scary</span>
-            <span class="home-text17">.</span>
+            <span class="home-text15">scary</span>
+            <span class="home-text16">.</span>
           </h1>
           <img
             alt="image"
@@ -164,15 +164,14 @@
             loop="true"
             class="home-video"
           ></video>
-          <h1 class="home-header4">wandr</h1>
-          <h1 class="home-header5">
-            <span class="home-text18">meet our</span>
-            <span>&nbsp;</span>
-            <span class="home-text20">team</span>
-            <span class="home-text21">.</span>
-          </h1>
+          <h1 class="home-header5">wandr</h1>
           <h1 class="home-header6">
-            <span class="home-text22">explore cities confidently with</span>
+            <span class="home-text17">meet our&nbsp;</span>
+            <span class="home-text18">team</span>
+            <span class="home-text19">.</span>
+          </h1>
+          <h1 class="home-header7">
+            <span class="home-text20">explore cities confidently with</span>
             <span></span>
           </h1>
           <img
