--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
             <span class="home-text13">new cities can be</span>
             <span></span>
             <span class="home-text15">scary</span>
-            <span class="home-text16">.</span>
           </h1>
           <img
             alt="image"
@@ -166,12 +165,7 @@
           ></video>
           <h1 class="home-header5">wandr</h1>
           <h1 class="home-header6">
-            <span class="home-text17">meet our&nbsp;</span>
-            <span class="home-text18">team</span>
-            <span class="home-text19">.</span>
-          </h1>
-          <h1 class="home-header7">
-            <span class="home-text20">explore cities confidently with</span>
+            <span class="home-text16">explore cities confidently with</span>
             <span></span>
           </h1>
           <img
@@ -208,6 +202,11 @@
               class="home-image18"
             />
           </a>
+          <h1 class="home-header7">
+            <span class="home-text18">meet our</span>
+            <span></span>
+            <span class="home-text20">team</span>
+          </h1>
         </section>
         <footer class="home-footer">
           <div class="home-main">
