Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               data-role="Nav"
               class="home-desktop-menu"
             ></div>
-            <a href="index.html" class="home-navlink">
+            <a href="index.html" class="home-navlink1">
               <img
                 alt="image"
                 src="public/Images/wander-logo-200h.png"
@@ -110,9 +110,9 @@
           </header>
         </header>
         <section class="home-hero">
-          <button type="button" class="home-button button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
-          </button>
+          </a>
           <h2 class="home-header2">...</h2>
           <h2 class="home-header3">
             <span class="home-text10">your</span>
@@ -212,8 +212,8 @@
           <div class="home-main">
             <div class="home-branding">
               <div class="home-heading">
-                <h2 class="home-logo">wandr</h2>
                 <p class="home-caption5">making wandering more, safe</p>
+                <h2 class="home-logo">wandr</h2>
               </div>
               <div class="home-socials">
                 <a
