--- a/map_spin.html
+++ b/map_spin.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 <meta charset="utf-8">
 <title>Animate map camera around a point</title>
@@ -15,10 +14,11 @@ body { margin: 0; padding: 0; }
 <div id="map"></div>
 <script>
 	mapboxgl.accessToken = 'pk.eyJ1Ijoia2VlenkiLCJhIjoiY20zcHNtb2xuMGZ6YjJzc2VvaHdleDJvbCJ9.8JkhFV0AYdyeP7xsi2SehA';
+    const tenderloin = [-122.414193, 37.784028];
     const map = new mapboxgl.Map({
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-        style: 'mapbox://styles/keezy/cm6wgc2q200jo01saevaqbvy0',
+        style: 'mapbox://styles/keezy/cm72h1jq101ow01s2g871dwgr',
         center: [-122.420916, 37.778260], // starting position
         zoom: 15, // starting zoom
         pitch: 45,
