Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -156,11 +156,11 @@
         <section class="home-description2">
           <video
             src="public/map-spin%20(1)%20(1)%20(1).mp4"
-            autoplay="true"
+            loop="true"
             muted="true"
             preload="auto"
+            autoplay="true"
             playsinline="true"
-            loop="true"
             class="home-video"
           ></video>
           <h1 class="home-header5">wandr</h1>
@@ -169,13 +169,13 @@
             <span></span>
           </h1>
           <img
-            src="public/Images/kieran-200w.jpg"
             alt="image"
+            src="public/Images/kieran-200w.jpg"
             class="home-image15"
           />
           <img
-            src="public/Images/ruby-200w.jpg"
             alt="image"
+            src="public/Images/ruby-200w.jpg"
             class="home-image16"
           />
           <a
@@ -185,8 +185,8 @@
             class="home-link1"
           >
             <img
-              src="public/Images/linkedin-800h.png"
               alt="image"
+              src="public/Images/linkedin-800h.png"
               class="home-image17"
             />
           </a>
@@ -197,8 +197,8 @@
             class="home-link2"
           >
             <img
-              src="public/Images/linkedin-800h.png"
               alt="image"
+              src="public/Images/linkedin-800h.png"
               class="home-image18"
             />
           </a>
@@ -251,13 +251,5 @@
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script>
-    <script>
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
