--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
               <img
                 alt="image"
                 src="public/Images/wander-logo-200h.png"
-                class="home-image10"
+                class="home-image1"
               />
             </a>
             <div data-thq="thq-mobile-menu" class="home-mobile-menu"></div>
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -124,23 +124,43 @@
           <img
             alt="image"
             src="public/Images/1-400w.jpeg"
-            class="home-image11"
+            class="home-image2"
           />
           <h1 class="home-header4">
             <span class="home-text13">new cities can be</span>
             <span></span>
             <span class="home-text15">scary</span>
           </h1>
-          <img
-            alt="image"
-            src="public/Images/4-700w.jpeg"
-            class="home-image12"
-          />
-          <img
-            alt="image"
-            src="public/Images/3-700w.jpeg"
-            class="home-image13"
-          />
+          <animate-on-reveal
+            animation="slideInRight"
+            duration="2s"
+            delay="0s"
+            direction="normal"
+            easing="ease"
+            iteration="1"
+          >
+            <img
+              alt="image"
+              src="public/Images/4-700w.jpeg"
+              data-thq-animate-on-reveal="true"
+              class="home-image3"
+            />
+          </animate-on-reveal>
+          <animate-on-reveal
+            animation="slideInLeft"
+            duration="2s"
+            delay="0s"
+            direction="normal"
+            easing="ease"
+            iteration="1"
+          >
+            <img
+              alt="image"
+              src="public/Images/3-700w.jpeg"
+              data-thq-animate-on-reveal="true"
+              class="home-image4"
+            />
+          </animate-on-reveal>
           <p class="home-caption1">“is that area okay to walk through?”</p>
           <p class="home-caption2">— academic wanderer</p>
           <p class="home-caption3">— city wanderer</p>
@@ -150,19 +170,22 @@
           <img
             alt="image"
             src="public/Images/2-400w.jpeg"
-            class="home-image14"
+            class="home-image5"
           />
         </section>
         <section class="home-description2">
-          <video
-            src="public/map-spin%20(1)%20(1)%20(1).mp4"
-            loop="true"
-            muted="true"
-            preload="auto"
-            autoplay="true"
-            playsinline="true"
-            class="home-video"
-          ></video>
+          <animate-on-reveal>
+            <video
+              src="public/map-spin%20(1)%20(1)%20(1).mp4"
+              loop="true"
+              muted="true"
+              preload="auto"
+              autoplay="true"
+              playsinline="true"
+              data-thq-animate-on-reveal="true"
+              class="home-video"
+            ></video>
+          </animate-on-reveal>
           <h1 class="home-header5">wandr</h1>
           <h1 class="home-header6">
             <span class="home-text16">explore cities confidently with</span>
@@ -171,12 +194,12 @@
           <img
             alt="image"
             src="public/Images/kieran-200w.jpg"
-            class="home-image15"
+            class="home-image6"
           />
           <img
             alt="image"
             src="public/Images/ruby-200w.jpg"
-            class="home-image16"
+            class="home-image7"
           />
           <a
             href="https://www.linkedin.com/in/kierandwallace/"
@@ -187,7 +210,7 @@
             <img
               alt="image"
               src="public/Images/linkedin-800h.png"
-              class="home-image17"
+              class="home-image8"
             />
           </a>
           <a
@@ -199,7 +222,7 @@
             <img
               alt="image"
               src="public/Images/linkedin-800h.png"
-              class="home-image18"
+              class="home-image9"
             />
           </a>
           <h1 class="home-header7">
@@ -207,40 +230,35 @@
             <span></span>
             <span class="home-text20">team</span>
           </h1>
+          <p class="home-caption5">
+            <span class="home-text21">Interactive Map:</span>
+            <span>
+              Allows users to zoom in and out, and click on specific areas for
+              detailed crime statistics.
+            </span>
+          </p>
+          <p class="home-caption6">
+            <span class="home-text23">Color-Coded Zones:</span>
+            <span>
+              Displays areas with varying levels of danger using a color-coded
+              system (e.g., green for safe, yellow for caution, red for high
+              danger).
+            </span>
+          </p>
+          <p class="home-caption7">
+            <span class="home-text25">Crime Data Integration:</span>
+            <span class="home-text26">
+              Utilizes real-time crime data from local law enforcement and
+              public safety agencies.
+            </span>
+          </p>
         </section>
         <footer class="home-footer">
           <div class="home-main">
+            <h2 class="home-logo">wandr</h2>
             <div class="home-branding">
-              <div class="home-heading">
-                <p class="home-caption5">making wandering more, safe</p>
-                <h2 class="home-logo">wandr</h2>
-              </div>
-              <div class="home-socials">
-                <a
-                  href="https://twitter.com"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-twitter social button"
-                >
-                  <img
-                    alt="image"
-                    src="public/Icons/twitter.svg"
-                    class="home-image19"
-                  />
-                </a>
-                <a
-                  href="https://discord.com"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-discord social button"
-                >
-                  <img
-                    alt="image"
-                    src="public/Icons/discord.svg"
-                    class="home-image20"
-                  />
-                </a>
-              </div>
+              <div class="home-heading"></div>
+              <div class="home-socials"></div>
             </div>
           </div>
           <span class="home-copyright">© 2025 wandr. All Rights Reserved.</span>
@@ -251,13 +269,9 @@
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script>
-    <script>
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script
+      defer=""
+      src="https://unpkg.com/@teleporthq/react-components/dist/animate-on-reveal.umd.js"
+    ></script>
   </body>
 </html>
