Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -230,28 +230,34 @@
             <span></span>
             <span class="home-text20">team</span>
           </h1>
-          <p class="home-caption5">
-            <span class="home-text21">Interactive Map:</span>
-            <span>
-              Allows users to zoom in and out, and click on specific areas for
-              detailed crime statistics.
-            </span>
-          </p>
-          <p class="home-caption6">
-            <span class="home-text23">Color-Coded Zones:</span>
-            <span>
-              Displays areas with varying levels of danger using a color-coded
-              system (e.g., green for safe, yellow for caution, red for high
-              danger).
-            </span>
-          </p>
-          <p class="home-caption7">
-            <span class="home-text25">Crime Data Integration:</span>
-            <span class="home-text26">
-              Utilizes real-time crime data from local law enforcement and
-              public safety agencies.
-            </span>
-          </p>
+          <animate-on-reveal animation="slideInRight" duration="2s">
+            <p data-thq-animate-on-reveal="true" class="home-caption5">
+              <span class="home-text21">Interactive Map:</span>
+              <span>
+                Allows users to zoom in and out, and click on specific areas for
+                detailed crime statistics.
+              </span>
+            </p>
+          </animate-on-reveal>
+          <animate-on-reveal animation="slideInLeft" duration="2s">
+            <p data-thq-animate-on-reveal="true" class="home-caption6">
+              <span class="home-text23">Color-Coded Zones:</span>
+              <span>
+                Displays areas with varying levels of danger using a color-coded
+                system (e.g., green for safe, yellow for caution, red for high
+                danger).
+              </span>
+            </p>
+          </animate-on-reveal>
+          <animate-on-reveal animation="slideInRight" duration="2s">
+            <p data-thq-animate-on-reveal="true" class="home-caption7">
+              <span class="home-text25">Crime Data Integration:</span>
+              <span class="home-text26">
+                Utilizes real-time crime data from local law enforcement and
+                public safety agencies.
+              </span>
+            </p>
+          </animate-on-reveal>
         </section>
         <footer class="home-footer">
           <div class="home-main">
