--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="team.html" class="home-navlink2 button-mobile button">
+          <a href="sf.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -279,5 +279,13 @@
       defer=""
       src="https://unpkg.com/@teleporthq/react-components/dist/animate-on-reveal.umd.js"
     ></script>
+    <script>
+      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
